--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -5,5 +5,9 @@ jobs:
   Pajarraco-Actions:
     runs-on: ubuntu-latest
     steps:
-      - run: npm install;
-      - run: npm start;
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.5.x
+          cache: npm
+      - run: ./npm start
